Hardcore the ruby and patch level so that app_prototype is executable without futzing.

--- a/app_prototype/Gemfile
+++ b/app_prototype/Gemfile
@@ -1,7 +1,7 @@
 source 'https://rubygems.org'
 
 # Heroku uses the ruby version to configure your application's runtime.
-ruby 'RUBY_VERSION'
+ruby '1.9.3'
 
 gem 'thin'
 gem 'rails', '~> 3.2.9'
