User mailcacher in development if it's running.

--- a/app_prototype/Gemfile
+++ b/app_prototype/Gemfile
@@ -36,6 +36,7 @@ end
 group :development do
   gem 'foreman'
   gem 'launchy'
+  gem 'mailcatcher'
   gem 'guard'
   gem 'guard-rspec'
   gem 'guard-jasmine'
