--- a/app_prototype/.env
+++ b/app_prototype/.env
@@ -1,4 +1,4 @@
-# Set envirnoment variables needed for development here. These values will be
+# Set environment variables needed for development here. These values will be
 # used unless they're already set.
 #
 # http://ddollar.github.com/foreman/#ENVIRONMENT
