--- a/app_prototype/Gemfile
+++ b/app_prototype/Gemfile
@@ -34,6 +34,7 @@ group :test, :development do
   gem 'jasminerice'
   gem 'timecop'
   gem 'simplecov'
+  gem 'quiet_assets'
 end
 
 group :development do
