--- a/app_prototype/Gemfile
+++ b/app_prototype/Gemfile
@@ -4,7 +4,7 @@ source 'https://rubygems.org'
 ruby '1.9.3'
 
 gem 'thin'
-gem 'rails', '~> 3.2.12'
+gem 'rails', '~> 3.2.13.rc1'
 gem 'slim-rails'
 gem 'jquery-rails'
 gem 'sorcery'
