--- a/rails_32/Gemfile
+++ b/rails_32/Gemfile
@@ -30,6 +30,7 @@ group :test, :development do
   gem 'rspec-rails'
   gem 'capybara'
   gem 'capybara-email'
+  gem 'database_cleaner'
   gem 'factory_girl_rails'
   gem 'jasminerice'
   gem 'timecop'
