--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -63,4 +63,4 @@ workflows:
       - rspec:
           matrix:
             parameters:
-              version: ["2.5.8", "2.6.6", "2.7.2"]
+              version: ["2.5.8", "2.6.6", "2.7.2", "3.0.0"]
